welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: '(' expected but identifier found.
  if (comp(a)) {if comp(b) return Math.max(a,b) else return a}
                   ^max1020:3: error: illegal start of simple expression
  if (comp(a)) {if comp(b) return Math.max(a,b) else return a}
                                                             ^max1020:4: error: '(' expected but identifier found.
  else {if comp(b) return b else return 0}
           ^max1020:4: error: illegal start of simple expression
  else {if comp(b) return b else return 0}
                                         ^